[package]
name = "hound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
serde_json = "1.0.93"
serde = {version="1.0.152",features=["derive"]}
clap = {version="4.1.6",features=["derive"]}
walkdir = "2.3.2"
tokio = { version = "1", features = ["full"] }
conan-build = "0.1.3"
requirements = "0.3.0"
taplo = "0.12.0"
npm-package-json = "0.1.3"
indexmap = "1.9.2"
yarn-lock-parser = "0.4.1"
regex = "1.7.0"
prettytable-rs = "0.9.0"
roxmltree = "0.16.0"
json = "0.12.4"
